Fixed overflow issue with products

--- a/src/app/Components/home/home-page/products/products.component.css
+++ b/src/app/Components/home/home-page/products/products.component.css
@@ -1,10 +1,8 @@
 /* Products Styles */
-
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  max-width: 50%;
-  margin: auto;
+
 }
 
 div {
@@ -20,9 +18,12 @@ section {
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  max-width: 75%;
+  margin:auto;
 }
 
 span {
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,12 +33,12 @@ span {
 
 /*Image Styles*/
 #item {
-  width: 300px;
-  height: 300px;
+  max-width: 300px;
   object-fit: contain;
   border-radius: 3px;
-  margin: 0px 50px;
-  /*background-color: #c06013;*/
+  padding: 0px 15px;
+
+
 }
 
 #shadow{
